[ABPC]: continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/02_positions.html
+++ b/src/Notes/Music/ABPCI/02_positions.html
@@ -50,6 +50,9 @@
 </li><li>
 <a href="02_positions.html#Left%20Hand%20Do%20Position">Left Hand Do Position</a>
 
+</li><li>
+<a href="02_positions.html#Right%20Hand%20Extended%20Do%20Position">Right Hand Extended Do Position</a>
+
 </li></ul>
 </li><li>
 <a href="02_positions.html#Sol%20Position">Sol Position</a>
@@ -108,6 +111,20 @@ Notes for this position are writter on the <span id="Positions-Do Position-Left 
 
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/left_hand_c_position_score.png" alt="Left Hand Do Position Score" style="width:600px;">
+</p>
+
+<div id="Positions-Do Position-Right Hand Extended Do Position"><h3 id="Right Hand Extended Do Position" class="header"><a href="#Positions-Do Position-Right Hand Extended Do Position">Right Hand Extended Do Position</a></h3></div>
+
+<p>
+This position is similar to the standard Do position, but modified as follows:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/extended_do_position.png" alt="Extended Do Position">
+</p>
+
+<p>
+So now the first three fingers are on Do, Mi and Sol, while the last finger is on the next Do, an octave higher.
 </p>
 
 <div id="Positions-Sol Position"><h2 id="Sol Position" class="header"><a href="#Positions-Sol Position">Sol Position</a></h2></div>
