--- a/src/Notes/Music/ABPCI/06_keys.html
+++ b/src/Notes/Music/ABPCI/06_keys.html
@@ -41,13 +41,8 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
-<a href="06_keys.html#Primary%20Chords">Primary Chords</a>
+<a href="06_keys.html#Key%20of%20Sol%20Major">Key of Sol Major</a>
 
-<ul>
-<li>
-<a href="06_keys.html#Primary%20Chords%20in%20Do%20Major">Primary Chords in Do Major</a>
-
-</li></ul>
 </li></ul>
 <hr>
 
@@ -59,29 +54,15 @@ Music based on any particular scale is said to be in the <span id="Keys-key"></s
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/key_signature.png" alt="Key Signature">
 </p>
 
-<div id="Keys-Primary Chords"><h2 id="Primary Chords" class="header"><a href="#Keys-Primary Chords">Primary Chords</a></h2></div>
+<div id="Keys-Key of Sol Major"><h2 id="Key of Sol Major" class="header"><a href="#Keys-Key of Sol Major">Key of Sol Major</a></h2></div>
 
 <p>
-The three most important chords in any key are those built on the <span id="Keys-Primary Chords-1st"></span><strong id="1st">1st</strong>, <span id="Keys-Primary Chords-4th"></span><strong id="4th">4th</strong> and <span id="Keys-Primary Chords-5th"></span><strong id="5th">5th</strong> notes of the scale. These are called the <span id="Keys-Primary Chords-PRIMARY CHORDS"></span><strong id="PRIMARY CHORDS">PRIMARY CHORDS</strong> of the key.
+A piece based on the Sol major scale is in the <span id="Keys-Key of Sol Major-KEY OF Sol MAJOR"></span><strong id="KEY OF Sol MAJOR">KEY OF Sol MAJOR</strong>. Since fa is sharp in the Sol scale, every fa will be sharp in the key of Sol major. Instead of placing a sharp before every fa in the entire piece, the sharp is indicated at the beginning in the <span id="Keys-Key of Sol Major-KEY SIGNATURE"></span><strong id="KEY SIGNATURE">KEY SIGNATURE</strong>.
 </p>
 
 <p>
-The chords are identified by the roman numerals \(\textbf{I}\), \(\textbf{IV}\) and \(\textbf{V}\). The \(\textbf{V}\) chord usually adds the note a \(7\)th above the root to make a \(\textbf{V}^7\).
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/sol_major_key.png" alt="Sol Major Key">
 </p>
-
-<div id="Keys-Primary Chords-Primary Chords in Do Major"><h3 id="Primary Chords in Do Major" class="header"><a href="#Keys-Primary Chords-Primary Chords in Do Major">Primary Chords in Do Major</a></h3></div>
-
-<ul>
-<li>
-The \(\textbf{I}\) chord is the Do Major Triad.
-
-</li><li>
-The \(\textbf{IV}\) chord is the Fa Major Triad.
-
-</li><li>
-The \(\textbf{V}\) chord is the \(\text{Sol}^7\) Major Triad. (Sol Major triad with an added \(7\)th).
-
-</li></ul>
 </div>
   
 
