--- a/src/Notes/Music/ABPCI/07_tidbits.html
+++ b/src/Notes/Music/ABPCI/07_tidbits.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../src/style/custom.css">
-    <title>Alfred Basic Piano Course I</title>
+    <title>Tidbits of Music</title>
   <link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"><script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,36 +31,47 @@
     <hr>
     <div class="content">
 <p>
-<a href="../index.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
-<div id="Alfred Basic Piano Course I"><h1 id="Alfred Basic Piano Course I" class="header"><a href="#Alfred Basic Piano Course I">Alfred Basic Piano Course I</a></h1></div>
+<div id="Tidbits of Music"><h1 id="Tidbits of Music" class="header"><a href="#Tidbits of Music">Tidbits of Music</a></h1></div>
 
 <hr>
 
-<ol>
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
 <li>
-<a href="01_notation.html">Notation</a>
+<a href="07_tidbits.html#Blues">Blues</a>
+
+</li></ul>
+<hr>
+
+<div id="Tidbits of Music-Blues"><h2 id="Blues" class="header"><a href="#Tidbits of Music-Blues">Blues</a></h2></div>
+
+<p>
+Music cal led BLUES has long been a part of the of American musical heritage. We find it in the music of many popular song writers, in ballads, boogie and rock. Blues follows a basic formula, that is, a standard chord progression:
+</p>
+
+<ul>
+<li>
+4 measures of the I chord
 
 </li><li>
-<a href="02_positions.html">Positions</a>
+2 measures of the IV chord
 
 </li><li>
-<a href="03_intervals.html">Intervals</a>
+2 measures of the I chord
 
 </li><li>
-<a href="04_chords.html">Chords</a>
+1 measure of the \(V^7\) chord
 
 </li><li>
-<a href="05_scales.html">Scales</a>
+2 measures of the IV chord
 
 </li><li>
-<a href="06_keys.html">Keys</a>
+2 measures of the I chord
 
-</li><li>
-<a href="07_tidbits.html">Tidbits</a>
-
-</li></ol>
+</li></ul>
 </div>
   
 
