--- a/src/Notes/Music/ABPCI/04_chords.html
+++ b/src/Notes/Music/ABPCI/04_chords.html
@@ -74,6 +74,17 @@
 </li><li>
 <a href="04_chords.html#Triads">Triads</a>
 
+</li><li>
+<a href="04_chords.html#Primary%20Chords">Primary Chords</a>
+
+<ul>
+<li>
+<a href="04_chords.html#Primary%20Chords%20in%20Do%20Major">Primary Chords in Do Major</a>
+
+</li></ul>
+</li><li>
+<a href="04_chords.html#Chord%20Progressions">Chord Progressions</a>
+
 </li></ul>
 <hr>
 
@@ -185,6 +196,47 @@ The root is the note from which the triad gets its name. The root of a Do Triad 
 
 <p>
 Triads in <span id="Chords-Triads-root position"></span><strong id="root position">root position</strong> are triads that have the root at the bottom.
+</p>
+
+<div id="Chords-Primary Chords"><h2 id="Primary Chords" class="header"><a href="#Chords-Primary Chords">Primary Chords</a></h2></div>
+
+<p>
+The three most important chords in any key are those built on the <span id="Chords-Primary Chords-1st"></span><strong id="1st">1st</strong>, <span id="Chords-Primary Chords-4th"></span><strong id="4th">4th</strong> and <span id="Chords-Primary Chords-5th"></span><strong id="5th">5th</strong> notes of the scale. These are called the <span id="Chords-Primary Chords-PRIMARY CHORDS"></span><strong id="PRIMARY CHORDS">PRIMARY CHORDS</strong> of the key.
+</p>
+
+<p>
+The chords are identified by the roman numerals \(\textbf{I}\), \(\textbf{IV}\) and \(\textbf{V}\). The \(\textbf{V}\) chord usually adds the note a \(7\)th above the root to make a \(\textbf{V}^7\).
+</p>
+
+<div id="Chords-Primary Chords-Primary Chords in Do Major"><h3 id="Primary Chords in Do Major" class="header"><a href="#Chords-Primary Chords-Primary Chords in Do Major">Primary Chords in Do Major</a></h3></div>
+
+<ul>
+<li>
+The \(\textbf{I}\) chord is the Do Major Triad.
+
+</li><li>
+The \(\textbf{IV}\) chord is the Fa Major Triad.
+
+</li><li>
+The \(\textbf{V}\) chord is the \(\text{Sol}^7\) Major Triad. (Sol Major triad with an added \(7\)th).
+
+</li></ul>
+<div id="Chords-Chord Progressions"><h2 id="Chord Progressions" class="header"><a href="#Chords-Chord Progressions">Chord Progressions</a></h2></div>
+
+<p>
+When we change from one chord to another, we call this a <span id="Chords-Chord Progressions-CHORD PROGRESSION"></span><strong id="CHORD PROGRESSION">CHORD PROGRESSION</strong>.
+</p>
+
+<p>
+To make the chord progressions easier to play and sound better, the \(IV\) and \(V^7\) chords may be played in other positions by moving one or more of the higher chord tones down an octave.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/chord_progressions.png" alt="Chord Progressions">
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/chord_progressions_1.png" alt="Chord Progressions">
 </p>
 </div>
   
