--- a/src/Notes/Music/ABPCI/05_scales.html
+++ b/src/Notes/Music/ABPCI/05_scales.html
@@ -43,6 +43,9 @@
 <li>
 <a href="05_scales.html#Do%20Major%20Scale">Do Major Scale</a>
 
+</li><li>
+<a href="05_scales.html#Sol%20Major%20Scale">Sol Major Scale</a>
+
 </li></ul>
 <hr>
 
@@ -62,6 +65,16 @@ The Do Major scale is constrcuted as follow:
 
 <p>
 Each scale begins and ends on a note of the same name as the scale, called the <span id="Scales-Do Major Scale-key note"></span><strong id="key note">key note</strong>.
+</p>
+
+<div id="Scales-Sol Major Scale"><h2 id="Sol Major Scale" class="header"><a href="#Scales-Sol Major Scale">Sol Major Scale</a></h2></div>
+
+<p>
+The Sol Major Scale is also made up of two tetrachods, where the second tetrachord begins in Re:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/sol_major_scale.png" alt="Sol Major Scale">
 </p>
 </div>
   
