[ABPC] Continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/01_notation.html
+++ b/src/Notes/Music/ABPCI/01_notation.html
@@ -88,6 +88,12 @@
 </li><li>
 <a href="01_notation.html#Whole%20Step">Whole Step</a>
 
+</li><li>
+<a href="01_notation.html#Syncopated%20Notes">Syncopated Notes</a>
+
+</li><li>
+<a href="01_notation.html#Natural%20Sign">Natural Sign</a>
+
 </li></ul>
 <hr>
 
@@ -298,6 +304,18 @@ A whole step is equal to two half steps.
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/whole_step.png" alt="Whole Step">
 </p>
+
+<div id="Notation-Syncopated Notes"><h2 id="Syncopated Notes" class="header"><a href="#Notation-Syncopated Notes">Syncopated Notes</a></h2></div>
+
+<p>
+Notes that are played between the main beats of the measure and are held across the beat are called <span id="Notation-Syncopated Notes-syncopated notes"></span><strong id="syncopated notes">syncopated notes</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/syncopated_notes.png" alt="Syncopated Notes">
+</p>
+
+<div id="Notation-Natural Sign"><h2 id="Natural Sign" class="header"><a href="#Notation-Natural Sign">Natural Sign</a></h2></div>
 </div>
   
 
