--- a/src/Notes/Music/ABPCI/04_chords.html
+++ b/src/Notes/Music/ABPCI/04_chords.html
@@ -65,7 +65,7 @@
 <a href="04_chords.html#Re7">Re7</a>
 
 </li><li>
-<a href="04_chords.html#Do%20Major">Do Major</a>
+<a href="04_chords.html#Do%20Major%20in%20Sol%20Position">Do Major in Sol Position</a>
 
 </li></ul>
 </li><li>
@@ -80,6 +80,9 @@
 <ul>
 <li>
 <a href="04_chords.html#Primary%20Chords%20in%20Do%20Major">Primary Chords in Do Major</a>
+
+</li><li>
+<a href="04_chords.html#Primary%20Chords%20in%20Sol%20Major">Primary Chords in Sol Major</a>
 
 </li></ul>
 </li><li>
@@ -138,10 +141,10 @@ The <span id="Chords-Chords in Do Position-Fa Major-Fa Major Chord"></span><stro
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/re7_chord.png" alt="The Re 7 Major Chord">
 </p>
 
-<div id="Chords-Chords in Sol Position-Do Major"><h3 id="Do Major" class="header"><a href="#Chords-Chords in Sol Position-Do Major">Do Major</a></h3></div>
+<div id="Chords-Chords in Sol Position-Do Major in Sol Position"><h3 id="Do Major in Sol Position" class="header"><a href="#Chords-Chords in Sol Position-Do Major in Sol Position">Do Major in Sol Position</a></h3></div>
 
 <p>
-We know that the Do Major is composed of the following notes: Do, Mi, Sol. When you play the same notes of a chord in a different order, it’s still the same chord, but in what’s called an <span id="Chords-Chords in Sol Position-Do Major-inversion"></span><strong id="inversion">inversion</strong>. For example:
+We know that the Do Major is composed of the following notes: Do, Mi, Sol. When you play the same notes of a chord in a different order, it’s still the same chord, but in what’s called an <span id="Chords-Chords in Sol Position-Do Major in Sol Position-inversion"></span><strong id="inversion">inversion</strong>. For example:
 </p>
 
 <ul>
@@ -221,6 +224,19 @@ The \(\textbf{IV}\) chord is the Fa Major Triad.
 The \(\textbf{V}\) chord is the \(\text{Sol}^7\) Major Triad. (Sol Major triad with an added \(7\)th).
 
 </li></ul>
+<div id="Chords-Primary Chords-Primary Chords in Sol Major"><h3 id="Primary Chords in Sol Major" class="header"><a href="#Chords-Primary Chords-Primary Chords in Sol Major">Primary Chords in Sol Major</a></h3></div>
+ 
+<ul>
+<li>
+The \(\textbf{I}\) chord is <a href="04_chords.html#Sol Major">Sol Major</a>.
+
+</li><li>
+The \(\textbf{IV}\) chord is the <a href="04_chords.html#Do Major in Sol Position">Do Major in Sol position</a>.
+
+</li><li>
+The \(\textbf{V}\) chord is the <a href="04_chords.html#Re7">Re7 Major</a>.
+
+</li></ul>
 <div id="Chords-Chord Progressions"><h2 id="Chord Progressions" class="header"><a href="#Chords-Chord Progressions">Chord Progressions</a></h2></div>
 
 <p>
@@ -228,7 +244,11 @@ When we change from one chord to another, we call this a <span id="Chords-Chord 
 </p>
 
 <p>
-To make the chord progressions easier to play and sound better, the \(IV\) and \(V^7\) chords may be played in other positions by moving one or more of the higher chord tones down an octave.
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/chord_progressions_1.png" alt="Chord Progressions">
+</p>
+
+<p>
+To make the chord progressions easier to play and sound better, the \(IV\) and \(V^7\) chords may be played in other positions by moving one or more of the higher chord tones down an octave. For example for the primary chords on Do Major:
 </p>
 
 <p>
@@ -236,7 +256,11 @@ To make the chord progressions easier to play and sound better, the \(IV\) and \
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/images/Music/ABPCI/chord_progressions_1.png" alt="Chord Progressions">
+And the chord progressions for the primary chords Sol Major are:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/chord_progressions_sol.png" alt="Chord Progressions Sol Major">
 </p>
 </div>
   
