[ABPC] continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/01_notation.html
+++ b/src/Notes/Music/ABPCI/01_notation.html
@@ -316,6 +316,14 @@ Notes that are played between the main beats of the measure and are held across 
 </p>
 
 <div id="Notation-Natural Sign"><h2 id="Natural Sign" class="header"><a href="#Notation-Natural Sign">Natural Sign</a></h2></div>
+
+<p>
+The <span id="Notation-Natural Sign-natural sign"></span><strong id="natural sign">natural sign</strong> cancels a sharp or flat, so a note after a natural sign is always a white key.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/natural_sign.png" alt="Natural Sign">
+</p>
 </div>
   
 
