--- a/src/Notes/Music/ABPCI/05_scales.html
+++ b/src/Notes/Music/ABPCI/05_scales.html
@@ -46,6 +46,9 @@
 </li><li>
 <a href="05_scales.html#Sol%20Major%20Scale">Sol Major Scale</a>
 
+</li><li>
+<a href="05_scales.html#Fa%20Major%20Scale">Fa Major Scale</a>
+
 </li></ul>
 <hr>
 
@@ -75,6 +78,16 @@ The Sol Major Scale is also made up of two tetrachods, where the second tetracho
 
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/sol_major_scale.png" alt="Sol Major Scale">
+</p>
+
+<div id="Scales-Fa Major Scale"><h2 id="Fa Major Scale" class="header"><a href="#Scales-Fa Major Scale">Fa Major Scale</a></h2></div>
+
+<p>
+The Fa Major Scale follows the following structure:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/fa_major_scale.png" alt="Fa Major Scale">
 </p>
 </div>
   
