--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -72,6 +72,9 @@ Limits and Derivatives
 </li><li>
 <a href="02_03.html">Calculating Limits Using the Limits Laws</a>
 
+</li><li>
+<a href="02_04.html">The Precise Definition of a Limit</a>
+
 </li></ol>
 </li></ol>
 </div>
