[RTGW] 07: update index [skip ci]

--- a/src/Notes/ComputerScience/CG/RTGW/index.html
+++ b/src/Notes/ComputerScience/CG/RTGW/index.html
@@ -57,6 +57,9 @@
 </li><li>
 <a href="06.html">Colors, Depth Testing and Alpha Blending</a>
 
+</li><li>
+<a href="07.html">Textures</a>
+
 </li></ol>
 </div>
   
