--- a/src/Notes/ComputerScience/PR/CC/index.html
+++ b/src/Notes/ComputerScience/PR/CC/index.html
@@ -1,9 +1,9 @@
 <html><head>
     <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../src/style/index.css">
+    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../src/style/custom.css">
-    <title>Computer Science</title>
+    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/custom.css">
+    <title>Clean Code</title>
   <link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"><script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,41 +31,18 @@
     <hr>
     <div class="content">
 <p>
-<a href="../index.html">Back</a>
+<a href="../../index.html">Back</a>
 </p>
 
-<div id="Computer Science"><h1 id="Computer Science" class="header"><a href="#Computer Science">Computer Science</a></h1></div>
+<div id="Clean Code"><h1 id="Clean Code" class="header"><a href="#Clean Code">Clean Code</a></h1></div>
 
 <hr>
 
-<div id="Computer Science-Programming"><h2 id="Programming" class="header"><a href="#Computer Science-Programming">Programming</a></h2></div>
-
 <ol>
 <li>
-<a href="PR/CC/index.html">Clean Code</a>
+<a href="01.html">Meaningful Names</a>
 
 </li></ol>
-<div id="Computer Science-Computer Architecture"><h2 id="Computer Architecture" class="header"><a href="#Computer Science-Computer Architecture">Computer Architecture</a></h2></div>
-
-<ol>
-<li>
-<a href="CA/ECS/index.html">The Elements of Computer Systems</a>
-
-</li></ol>
-<div id="Computer Science-Computer Graphics"><h2 id="Computer Graphics" class="header"><a href="#Computer Science-Computer Graphics">Computer Graphics</a></h2></div>
-
-<ol>
-<li>
-<a href="CG/RTGW/index.html">Real-Time 3D Graphics with WebGL 2</a>
-
-</li></ol>
-<div id="Computer Science-Web"><h2 id="Web" class="header"><a href="#Computer Science-Web">Web</a></h2></div>
-
-<ul>
-<li>
-<a href="WebDev/index.html">WebDev</a>
-
-</li></ul>
 </div>
   
 
