[ABPC] Continue notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/02_04.html
+++ b/src/Notes/Math/Calculus/CET/02_04.html
@@ -190,7 +190,7 @@ means that for every \(\epsilon &gt; 0\) we can find \(\delta &gt; 0\) such that
 </p>
 
 <p>
-Also we can interpret the definition geometrically in terms of the graph of a function. If \(\epsilon &gt; 0\) is given we draw horizontal lines \(y = L + \epsilon\) and \(y = L - epsilon\) as well as the graph of \(f\) (see Figure 4).
+Also we can interpret the definition geometrically in terms of the graph of a function. If \(\epsilon &gt; 0\) is given we draw horizontal lines \(y = L + \epsilon\) and \(y = L - \epsilon\) as well as the graph of \(f\) (see Figure 4).
 </p>
 
 <p>
