--- a/src/Notes/Music/ABPCI/01_notation.html
+++ b/src/Notes/Music/ABPCI/01_notation.html
@@ -94,6 +94,12 @@
 </li><li>
 <a href="01_notation.html#Natural%20Sign">Natural Sign</a>
 
+</li><li>
+<a href="01_notation.html#Accent%20Sign">Accent Sign</a>
+
+</li><li>
+<a href="01_notation.html#Accent%20Sign">Accent Sign</a>
+
 </li></ul>
 <hr>
 
@@ -323,6 +329,22 @@ The <span id="Notation-Natural Sign-natural sign"></span><strong id="natural sig
 
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/natural_sign.png" alt="Natural Sign">
+</p>
+
+<div id="Notation-Accent Sign"><h2 id="Accent Sign" class="header"><a href="#Notation-Accent Sign">Accent Sign</a></h2></div>
+
+<p>
+An <span id="Notation-Accent Sign-accent sign"></span><strong id="accent sign">accent sign</strong> mean that we have to play a note with special emphasis:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/accent_sign.png" alt="Accent Sign">
+</p>
+
+<div id="Notation-Accent Sign"><h2 id="Accent Sign" class="header"><a href="#Notation-Accent Sign">Accent Sign</a></h2></div>
+
+<p>
+An <span id="Notation-Accent Sign-accent sign"></span><strong id="accent sign">accent sign</strong> mean that we have to play a note with special emphasis:
 </p>
 </div>
   
