--- a/src/Notes/Music/ABPCI/04_chords.html
+++ b/src/Notes/Music/ABPCI/04_chords.html
@@ -84,9 +84,15 @@
 </li><li>
 <a href="04_chords.html#Primary%20Chords%20in%20Sol%20Major">Primary Chords in Sol Major</a>
 
+</li><li>
+<a href="04_chords.html#Primary%20Chords%20in%20Fa%20Major">Primary Chords in Fa Major</a>
+
 </li></ul>
 </li><li>
 <a href="04_chords.html#Chord%20Progressions">Chord Progressions</a>
+
+</li><li>
+<a href="04_chords.html#Arpeggiated%20Progressions">Arpeggiated Progressions</a>
 
 </li></ul>
 <hr>
@@ -211,6 +217,10 @@ The three most important chords in any key are those built on the <span id="Chor
 The chords are identified by the roman numerals \(\textbf{I}\), \(\textbf{IV}\) and \(\textbf{V}\). The \(\textbf{V}\) chord usually adds the note a \(7\)th above the root to make a \(\textbf{V}^7\).
 </p>
 
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/primary_chords_major_keys.png" alt="Primary Chords in Major Keys">
+</p>
+
 <div id="Chords-Primary Chords-Primary Chords in Do Major"><h3 id="Primary Chords in Do Major" class="header"><a href="#Chords-Primary Chords-Primary Chords in Do Major">Primary Chords in Do Major</a></h3></div>
 
 <ul>
@@ -237,6 +247,23 @@ The \(\textbf{IV}\) chord is the <a href="04_chords.html#Do Major in Sol Positio
 The \(\textbf{V}\) chord is the <a href="04_chords.html#Re7">Re7 Major</a>.
 
 </li></ul>
+<div id="Chords-Primary Chords-Primary Chords in Fa Major"><h3 id="Primary Chords in Fa Major" class="header"><a href="#Chords-Primary Chords-Primary Chords in Fa Major">Primary Chords in Fa Major</a></h3></div>
+ 
+<ul>
+<li>
+The \(\textbf{I}\) chord is Fa Major.
+
+</li><li>
+The \(\textbf{IV}\) chord is the Sib Major.
+
+</li><li>
+The \(\textbf{V}\) chord is the Do Major.
+
+</li></ul>
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/primary_chords_fa_major.png" alt="Primary Chords in Fa Major">
+</p>
+
 <div id="Chords-Chord Progressions"><h2 id="Chord Progressions" class="header"><a href="#Chords-Chord Progressions">Chord Progressions</a></h2></div>
 
 <p>
@@ -261,6 +288,16 @@ And the chord progressions for the primary chords Sol Major are:
 
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/chord_progressions_sol.png" alt="Chord Progressions Sol Major">
+</p>
+
+<div id="Chords-Arpeggiated Progressions"><h2 id="Arpeggiated Progressions" class="header"><a href="#Chords-Arpeggiated Progressions">Arpeggiated Progressions</a></h2></div>
+
+<p>
+When a wavy line appears beside a chord, the chord is said to be <span id="Chords-Arpeggiated Progressions-arpeggiated"></span><strong id="arpeggiated">arpeggiated</strong>, that is broken or rolled. This means that you should play the lower note first, and quickly add the next higher notes one at a time until the chord is complete.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/arpeggiated_chords.png" alt="Arpeggiated Chords">
 </p>
 </div>
   
