--- a/src/Notes/Music/ABPCI/05_scales.html
+++ b/src/Notes/Music/ABPCI/05_scales.html
@@ -41,6 +41,10 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
+<a href="05_scales.html#Major%20Scales">Major Scales</a>
+
+<ul>
+<li>
 <a href="05_scales.html#Do%20Major%20Scale">Do Major Scale</a>
 
 </li><li>
@@ -50,13 +54,24 @@
 <a href="05_scales.html#Fa%20Major%20Scale">Fa Major Scale</a>
 
 </li></ul>
+</li><li>
+<a href="05_scales.html#Minor%20Scales">Minor Scales</a>
+
+<ul>
+<li>
+<a href="05_scales.html#The%20Fa%20Harmonic%20Minor%20Scale">The Fa Harmonic Minor Scale</a>
+
+</li></ul>
+</li></ul>
 <hr>
 
 <p>
 The <span id="Scales-major scale"></span><strong id="major scale">major scale</strong> is made of <span id="Scales-two tetrachords"></span><strong id="two tetrachords">two tetrachords</strong> joined by a <span id="Scales-whole step"></span><strong id="whole step">whole step</strong>.
 </p>
 
-<div id="Scales-Do Major Scale"><h2 id="Do Major Scale" class="header"><a href="#Scales-Do Major Scale">Do Major Scale</a></h2></div>
+<div id="Scales-Major Scales"><h2 id="Major Scales" class="header"><a href="#Scales-Major Scales">Major Scales</a></h2></div>
+
+<div id="Scales-Major Scales-Do Major Scale"><h3 id="Do Major Scale" class="header"><a href="#Scales-Major Scales-Do Major Scale">Do Major Scale</a></h3></div>
 
 <p>
 The Do Major scale is constrcuted as follow:
@@ -67,10 +82,10 @@ The Do Major scale is constrcuted as follow:
 </p>
 
 <p>
-Each scale begins and ends on a note of the same name as the scale, called the <span id="Scales-Do Major Scale-key note"></span><strong id="key note">key note</strong>.
+Each scale begins and ends on a note of the same name as the scale, called the <span id="Scales-Major Scales-Do Major Scale-key note"></span><strong id="key note">key note</strong>.
 </p>
 
-<div id="Scales-Sol Major Scale"><h2 id="Sol Major Scale" class="header"><a href="#Scales-Sol Major Scale">Sol Major Scale</a></h2></div>
+<div id="Scales-Major Scales-Sol Major Scale"><h3 id="Sol Major Scale" class="header"><a href="#Scales-Major Scales-Sol Major Scale">Sol Major Scale</a></h3></div>
 
 <p>
 The Sol Major Scale is also made up of two tetrachods, where the second tetrachord begins in Re:
@@ -80,7 +95,7 @@ The Sol Major Scale is also made up of two tetrachods, where the second tetracho
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/sol_major_scale.png" alt="Sol Major Scale">
 </p>
 
-<div id="Scales-Fa Major Scale"><h2 id="Fa Major Scale" class="header"><a href="#Scales-Fa Major Scale">Fa Major Scale</a></h2></div>
+<div id="Scales-Major Scales-Fa Major Scale"><h3 id="Fa Major Scale" class="header"><a href="#Scales-Major Scales-Fa Major Scale">Fa Major Scale</a></h3></div>
 
 <p>
 The Fa Major Scale follows the following structure:
@@ -89,6 +104,10 @@ The Fa Major Scale follows the following structure:
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/fa_major_scale.png" alt="Fa Major Scale">
 </p>
+
+<div id="Scales-Minor Scales"><h2 id="Minor Scales" class="header"><a href="#Scales-Minor Scales">Minor Scales</a></h2></div>
+
+<div id="Scales-Minor Scales-The Fa Harmonic Minor Scale"><h3 id="The Fa Harmonic Minor Scale" class="header"><a href="#Scales-Minor Scales-The Fa Harmonic Minor Scale">The Fa Harmonic Minor Scale</a></h3></div>
 </div>
   
 
