--- a/src/Notes/Music/ABPCI/06_keys.html
+++ b/src/Notes/Music/ABPCI/06_keys.html
@@ -41,8 +41,24 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
+<a href="06_keys.html#Major%20Keys">Major Keys</a>
+
+<ul>
+<li>
 <a href="06_keys.html#Key%20of%20Sol%20Major">Key of Sol Major</a>
 
+</li><li>
+<a href="06_keys.html#Key%20of%20Fa%20Major">Key of Fa Major</a>
+
+</li></ul>
+</li><li>
+<a href="06_keys.html#Minor%20Keys">Minor Keys</a>
+
+<ul>
+<li>
+<a href="06_keys.html#Relative%20Minor%20of%20Do%20Major%3A%20La%20Minor">Relative Minor of Do Major  La Minor</a>
+
+</li></ul>
 </li></ul>
 <hr>
 
@@ -54,14 +70,54 @@ Music based on any particular scale is said to be in the <span id="Keys-key"></s
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/key_signature.png" alt="Key Signature">
 </p>
 
-<div id="Keys-Key of Sol Major"><h2 id="Key of Sol Major" class="header"><a href="#Keys-Key of Sol Major">Key of Sol Major</a></h2></div>
+<div id="Keys-Major Keys"><h2 id="Major Keys" class="header"><a href="#Keys-Major Keys">Major Keys</a></h2></div>
+
+<div id="Keys-Major Keys-Key of Sol Major"><h3 id="Key of Sol Major" class="header"><a href="#Keys-Major Keys-Key of Sol Major">Key of Sol Major</a></h3></div>
 
 <p>
-A piece based on the Sol major scale is in the <span id="Keys-Key of Sol Major-KEY OF Sol MAJOR"></span><strong id="KEY OF Sol MAJOR">KEY OF Sol MAJOR</strong>. Since fa is sharp in the Sol scale, every fa will be sharp in the key of Sol major. Instead of placing a sharp before every fa in the entire piece, the sharp is indicated at the beginning in the <span id="Keys-Key of Sol Major-KEY SIGNATURE"></span><strong id="KEY SIGNATURE">KEY SIGNATURE</strong>.
+A piece based on the Sol major scale is in the <span id="Keys-Major Keys-Key of Sol Major-KEY OF Sol MAJOR"></span><strong id="KEY OF Sol MAJOR">KEY OF Sol MAJOR</strong>. Since fa is sharp in the Sol scale, every fa will be sharp in the key of Sol major. Instead of placing a sharp before every fa in the entire piece, the sharp is indicated at the beginning in the <span id="Keys-Major Keys-Key of Sol Major-KEY SIGNATURE"></span><strong id="KEY SIGNATURE">KEY SIGNATURE</strong>.
 </p>
 
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/sol_major_key.png" alt="Sol Major Key">
+</p>
+
+<div id="Keys-Major Keys-Key of Fa Major"><h3 id="Key of Fa Major" class="header"><a href="#Keys-Major Keys-Key of Fa Major">Key of Fa Major</a></h3></div>
+
+<p>
+A piece based on the Fa Major Scale has the following key signature:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/fa_major_key.png" alt="Fa Major Key">
+</p>
+
+<div id="Keys-Minor Keys"><h2 id="Minor Keys" class="header"><a href="#Keys-Minor Keys">Minor Keys</a></h2></div>
+
+<p>
+Every Major key has a relative minor key that has the same key signature.
+</p>
+
+<p>
+The relative minor being on the 6th tone of the major scale.
+</p>
+
+<div id="Keys-Minor Keys-Relative Minor of Do Major: La Minor"><h3 id="Relative Minor of Do Major: La Minor" class="header"><a href="#Keys-Minor Keys-Relative Minor of Do Major: La Minor">Relative Minor of Do Major: La Minor</a></h3></div>
+
+<p>
+The relative minor of Do Major is La Minor:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/la_minor.png" alt="La Minor">
+</p>
+
+<p>
+Because the key of Do Major and La Minor have the same key signature (no sharps and no flats) we say that they are relatives.
+</p>
+
+<p>
+The minor scale shown above is called the <span id="Keys-Minor Keys-Relative Minor of Do Major: La Minor-natural minor scale"></span><strong id="natural minor scale">natural minor scale</strong>.
 </p>
 </div>
   
