[CC] 02: fix typos [skip ci]

--- a/src/Notes/ComputerScience/PR/CC/02.html
+++ b/src/Notes/ComputerScience/PR/CC/02.html
@@ -140,10 +140,7 @@ The statements within a function should be all on the same level of abstraction.
 
 </li><li>
 Every function should be followed by those at the next level of abstraction, so the program can be read from top to bottom. That is:
-
-</li><li>
-Use descriptive names that say exactly what the function does.
-<pre>1 To print a string I have to create the string, show the string on the screen.
+<pre markdown="">1 To print a string I have to create the string, show the string on the screen.
   1.1 To create a string i have to create an array of characters and append each character
     1.1.1 To create an array of characters i have to allocate memory
     1.1.2 To append a character i have to find on memory the place i want to save it to and save its ascii
@@ -151,6 +148,12 @@ Use descriptive names that say exactly what the function does.
     1.2.1. To show a character on the screen i need to know its bitmap and print it on the screen
     ...
 </pre>
+
+</li></ul>
+ 
+<ul>
+<li>
+Use descriptive names that say exactly what the function does.
 
 </li></ul>
 <div id="Functions-Switch Statements"><h2 id="Switch Statements" class="header"><a href="#Functions-Switch Statements">Switch Statements</a></h2></div>
