[CC] 02: summarize a bit [skip ci]

--- a/src/Notes/ComputerScience/PR/CC/02.html
+++ b/src/Notes/ComputerScience/PR/CC/02.html
@@ -127,19 +127,19 @@ This is quite a convoluted function from which we can extract a few keypoints of
 
 <ul>
 <li>
-The first rule of functions is that they should be small.
+The first rule of functions is that <span id="Functions-How Functions Should be Defined-they should be small"></span><strong id="they should be small">they should be small</strong>.
 
 </li><li>
-The indent level should not be greater than 1 or 2.
+The <span id="Functions-How Functions Should be Defined-indent level"></span><strong id="indent level">indent level</strong> should not be greater than <span id="Functions-How Functions Should be Defined-1 or 2"></span><strong id="1 or 2">1 or 2</strong>.
 
 </li><li>
-A function should do one thing and one thing only. What does one thing really mean though? Well we say the function does one thing by abstracting all of the steps it executes along the way.
+A <span id="Functions-How Functions Should be Defined-function should do one thing"></span><strong id="function should do one thing">function should do one thing</strong> and one thing only. We say the function does one thing by abstracting all of the inner steps.
 
 </li><li>
-The statements within a function should be all on the same level of abstraction.
+The <span id="Functions-How Functions Should be Defined-statements"></span><strong id="statements">statements</strong> within a function should be <span id="Functions-How Functions Should be Defined-all on the same level of abstraction"></span><strong id="all on the same level of abstraction">all on the same level of abstraction</strong>.
 
 </li><li>
-Every function should be followed by those at the next level of abstraction, so the program can be read from top to bottom. That is:
+Every function should be defined so the <span id="Functions-How Functions Should be Defined-program can be read from top to bottom"></span><strong id="program can be read from top to bottom">program can be read from top to bottom</strong>. That is:
 <pre markdown="">1 To print a string I have to create the string, show the string on the screen.
   1.1 To create a string i have to create an array of characters and append each character
     1.1.1 To create an array of characters i have to allocate memory
@@ -153,7 +153,7 @@ Every function should be followed by those at the next level of abstraction, so 
  
 <ul>
 <li>
-Use descriptive names that say exactly what the function does.
+Use <span id="Functions-How Functions Should be Defined-descriptive names"></span><strong id="descriptive names">descriptive names</strong> that say exactly what the function does.
 
 </li></ul>
 <div id="Functions-Switch Statements"><h2 id="Switch Statements" class="header"><a href="#Functions-Switch Statements">Switch Statements</a></h2></div>
