[ABPC] Continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/01_notation.html
+++ b/src/Notes/Music/ABPCI/01_notation.html
@@ -98,7 +98,7 @@
 <a href="01_notation.html#Accent%20Sign">Accent Sign</a>
 
 </li><li>
-<a href="01_notation.html#Accent%20Sign">Accent Sign</a>
+<a href="01_notation.html#Overlapping%20Pedal">Overlapping Pedal</a>
 
 </li></ul>
 <hr>
@@ -191,6 +191,10 @@ A \(\textit{f (forte)}\) tells us to play loud.
 
 <p>
 A \(\textit{ff (fortissimo)}\) tells us to play very loud.
+</p>
+
+<p>
+A \(\textit{mp (mezzopiano)}\) tells us to play medium soft.
 </p>
 
 <div id="Notation-Tied Notes"><h2 id="Tied Notes" class="header"><a href="#Notation-Tied Notes">Tied Notes</a></h2></div>
@@ -341,10 +345,22 @@ An <span id="Notation-Accent Sign-accent sign"></span><strong id="accent sign">a
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/accent_sign.png" alt="Accent Sign">
 </p>
 
-<div id="Notation-Accent Sign"><h2 id="Accent Sign" class="header"><a href="#Notation-Accent Sign">Accent Sign</a></h2></div>
+<div id="Notation-Overlapping Pedal"><h2 id="Overlapping Pedal" class="header"><a href="#Notation-Overlapping Pedal">Overlapping Pedal</a></h2></div>
 
 <p>
-An <span id="Notation-Accent Sign-accent sign"></span><strong id="accent sign">accent sign</strong> mean that we have to play a note with special emphasis:
+The following sign is used to indicate the overlapping pedal:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/piece_overlapping_pedal.png" alt="Overlapping Pedal">
+</p>
+
+<p>
+And this is how you play it:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/overlapping_pedal.png" alt="Overlapping Pedal">
 </p>
 </div>
   
