--- a/src/Notes/Music/ABPCI/04_chords.html
+++ b/src/Notes/Music/ABPCI/04_chords.html
@@ -72,8 +72,25 @@
 <a href="04_chords.html#Tetrachord">Tetrachord</a>
 
 </li><li>
+<a href="04_chords.html#Major%203rd">Major 3rd</a>
+
+</li><li>
+<a href="04_chords.html#Minor%203rd">Minor 3rd</a>
+
+</li><li>
+<a href="04_chords.html#Perfect%205th">Perfect 5th</a>
+
+</li><li>
 <a href="04_chords.html#Triads">Triads</a>
 
+<ul>
+<li>
+<a href="04_chords.html#Major%20Triads">Major Triads</a>
+
+</li><li>
+<a href="04_chords.html#Minor%20Triads">Minor Triads</a>
+
+</li></ul>
 </li><li>
 <a href="04_chords.html#Primary%20Chords">Primary Chords</a>
 
@@ -182,6 +199,36 @@ Whole step, whole step, half step
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/tetrachord.png" alt="Tetrachord">
 </p>
 
+<div id="Chords-Major 3rd"><h2 id="Major 3rd" class="header"><a href="#Chords-Major 3rd">Major 3rd</a></h2></div>
+
+<p>
+A Major 3rd is an interval between two notes that are four half steps (semitones) apart. This interval gives a bright and happy sound. For example:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/major_3rd.png" alt="Major 3rd">
+</p>
+
+<div id="Chords-Minor 3rd"><h2 id="Minor 3rd" class="header"><a href="#Chords-Minor 3rd">Minor 3rd</a></h2></div>
+
+<p>
+A Minor 3rd is an interval between two notes that are three half steps (semitones) apart. This interval gives a slightly darker or sadder sound. For example:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/minor_3rd.png" alt="Minor 3rd">
+</p>
+
+<div id="Chords-Perfect 5th"><h2 id="Perfect 5th" class="header"><a href="#Chords-Perfect 5th">Perfect 5th</a></h2></div>
+
+<p>
+A Perfect 5th is a musical interval that spans seven half steps (or semitones) between two notes. For example:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/perfect_5th.png" alt="Perfect 5th">
+</p>
+
 <div id="Chords-Triads"><h2 id="Triads" class="header"><a href="#Chords-Triads">Triads</a></h2></div>
 
 <p>
@@ -205,6 +252,30 @@ The root is the note from which the triad gets its name. The root of a Do Triad 
 
 <p>
 Triads in <span id="Chords-Triads-root position"></span><strong id="root position">root position</strong> are triads that have the root at the bottom.
+</p>
+
+<div id="Chords-Triads-Major Triads"><h3 id="Major Triads" class="header"><a href="#Chords-Triads-Major Triads">Major Triads</a></h3></div>
+
+<p>
+Major triads consist of a <span id="Chords-Triads-Major Triads-root"></span><strong id="root">root</strong> a <a href="04_chords.html#Major 3rd">Major 3rd</a> and a <a href="04_chords.html#Perfect 5th">Perfect 5th</a>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/major_triad.png" alt="Major Triad">
+</p>
+
+<div id="Chords-Triads-Minor Triads"><h3 id="Minor Triads" class="header"><a href="#Chords-Triads-Minor Triads">Minor Triads</a></h3></div>
+
+<p>
+Major triads consist of a <span id="Chords-Triads-Minor Triads-root"></span><strong id="root">root</strong> a <a href="04_chords.html#Minor 3rd">Minor 3rd</a> and a <a href="04_chords.html#Perfect 5th">Perfect 5th</a>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/minor_triad.png" alt="Minor Triad">
+</p>
+
+<p>
+Any Major triad may be changed to a minor triad by lowering the 3rd one half step.
 </p>
 
 <div id="Chords-Primary Chords"><h2 id="Primary Chords" class="header"><a href="#Chords-Primary Chords">Primary Chords</a></h2></div>
