--- a/src/Notes/Music/ABPCI/05_scales.html
+++ b/src/Notes/Music/ABPCI/05_scales.html
@@ -59,7 +59,7 @@
 
 <ul>
 <li>
-<a href="05_scales.html#The%20Fa%20Harmonic%20Minor%20Scale">The Fa Harmonic Minor Scale</a>
+<a href="05_scales.html#The%20La%20Harmonic%20Minor%20Scale">The La Harmonic Minor Scale</a>
 
 </li></ul>
 </li></ul>
@@ -107,7 +107,15 @@ The Fa Major Scale follows the following structure:
 
 <div id="Scales-Minor Scales"><h2 id="Minor Scales" class="header"><a href="#Scales-Minor Scales">Minor Scales</a></h2></div>
 
-<div id="Scales-Minor Scales-The Fa Harmonic Minor Scale"><h3 id="The Fa Harmonic Minor Scale" class="header"><a href="#Scales-Minor Scales-The Fa Harmonic Minor Scale">The Fa Harmonic Minor Scale</a></h3></div>
+<div id="Scales-Minor Scales-The La Harmonic Minor Scale"><h3 id="The La Harmonic Minor Scale" class="header"><a href="#Scales-Minor Scales-The La Harmonic Minor Scale">The La Harmonic Minor Scale</a></h3></div>
+
+<p>
+This is the most frequently used minor scale. In this scale the 7th tone is flat. This flat is not included in the key signature, but is written each time it occurs.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/harmonic_minor_scale.png" alt="Harmonic La Minor Scale">
+</p>
 </div>
   
 
